@@ -2191,6 +2191,9 @@ backup_mailfiles=Backing up all mail files ..
 backup_mailfilesfailed=.. tar failed! $1
 backup_mailfilesnone=.. none to backup
 backup_mailcrons=Backing up mail and FTP user Cron jobs ..
+backup_mailcontrol=Backing up Dovecot control files ..
+backup_nomailcontrol=.. none found
+backup_emailcontrol=.. backup failed : $1
 backup_webalizercp=Copying Webalizer configuration files ..
 backup_logrotatecp=Copying Logrotate configuration ..
 backup_spamcp=Copying Procmail and SpamAssassin configuration files ..
@@ -2376,6 +2379,8 @@ restore_mailerrs=.. some errors occurred : $1.
 restore_mailnosuch=.. user $1 was not found in the backup.
 restore_mailmove2=Moving additional mail folders ..
 restore_emailmove2=.. failed to move $1 to $2 : $3
+restore_mailcontrol=Restoring Dovecot control files ..
+restore_emailcontrol=.. restore failed : $1
 restore_webalizercp=Restoring Webalizer configuration files and Cron job ..
 restore_dirchowning=Setting ownership of home directory ..
 restore_logrotatecp=Restoring Logrotate configuration ..
